tests/semantica/valid/if/test5.ctds
program 
    {
		bool foo(){
			return true;
		}

		void main(){
			bool z = true;
			if(foo() && z) then {
				return;
			}
		}
    }