tests/semantica/invalid/return/test5.ctds
program 
    {
		integer foo(){
			while(true){
				return 4;
			}
		}

		void main(){
			foo();
		}
		
    }